# mca-timer

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  test_callbacks.sh
.tasks/: TK-001_create-migrations-directory.md  TK-002_create-database-schema.md  TK-003_implement-config-module.md  TK-004_implement-models-module.md  TK-005_implement-database-operations.md  TK-006_implement-callback-module.md  TK-007_implement-scheduler-module.md  TK-008_implement-api-handlers.md  TK-009_implement-auth-middleware.md  TK-010_update-main-application.md  TK-011_create-dockerfile.md  TK-012_create-docker-compose.md  TK-013_update-env-example.md  TK-014_add-anyhow-dependency.md  TK-015_create-gitignore.md  TK-016_create-readme.md  TK-017_manual-testing-checklist.md  TK-018_add-nats-dependency.md  TK-019_update-models-callback-types.md  TK-020_add-nats-config.md  TK-021_create-database-migration.md  TK-022_update-timer-model-struct.md  TK-023_add-nats-client-to-appstate.md  TK-024_initialize-nats-in-main.md  TK-025_create-http-callback-module.md  TK-026_create-nats-callback-module.md  TK-027_update-callback-dispatcher.md  TK-028_update-database-queries.md  TK-029_update-scheduler-module.md  TK-030_update-create-timer-api.md  TK-031_update-get-timer-api.md  TK-032_update-list-timers-api.md  TK-033_update-update-timer-api.md  TK-034_register-callback-modules.md  TK-035_update-docker-compose-nats.md  TK-036_update-env-example.md  TK-037_update-health-check-nats.md  TK-038_create-http-callback-test.md  TK-039_create-nats-callback-test.md  TK-040_test-mixed-callbacks.md
migrations/: 20250101000000_create_timers_table.sql  20250102000000_add_callback_types.sql
src/: api_cancel_timer.rs  api_create_timer.rs  api_get_timer.rs  api_health.rs  (+11 more)
(+9 files in other folders)
